--- a/src/app/pages/renter/home-service/home-service.component.css
+++ b/src/app/pages/renter/home-service/home-service.component.css
@@ -28,7 +28,7 @@
   border-radius: 16px;
   box-shadow: 0px 4px 4px #00000040;
   transition: transform 0.3s ease;
-  padding: 16px
+  padding: 10px;
 }
 
 .fox-service-item:hover {
