--- a/src/app/pages/renter/home/components/accommodation-list/accommodation-list.component.css
+++ b/src/app/pages/renter/home/components/accommodation-list/accommodation-list.component.css
@@ -12,5 +12,6 @@ a {
     text-align: center;
     text-decoration: underline;
     color: rgb(159, 159, 159);
+    font-family: "Raleway", sans-serif;
     font-size: 24px;
 }
