--- a/src/app/pages/renter/story/story.component.html
+++ b/src/app/pages/renter/story/story.component.html
@@ -60,7 +60,7 @@
         Truc Quynh
       </h4>
       <p>
-        Master chef
+        Chief Commercial Officer
       </p>
     </div>
     <div class="founder">
@@ -69,7 +69,7 @@
         My Ngoc
       </h4>
       <p>
-        Master chef
+        Chief Financial Officer
       </p>
     </div>
     <div class="founder">
@@ -78,7 +78,7 @@
         Tra My
       </h4>
       <p>
-        Master chef
+        Chief Marketing Officer
       </p>
     </div>
     <div class="founder">
@@ -87,7 +87,7 @@
         Dang Hoang
       </h4>
       <p>
-        Master chef
+        Chief Executive Officer
       </p>
     </div>
     <div class="founder">
@@ -96,7 +96,7 @@
         Trong Tu
       </h4>
       <p>
-        Master chef
+        Chief Operations Officer
       </p>
     </div>
   </div>
