--- a/src/app/pages/renter/blog/blog.component.css
+++ b/src/app/pages/renter/blog/blog.component.css
@@ -15,6 +15,7 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  font-family: "Raleway", sans-serif;
 }
 
 h4 {
@@ -62,7 +63,6 @@ h4 {
 h1 {
   color: white;
   font-size: 96px;
-  font-family: "Raleway", sans-serif;
   font-weight: 900;
   text-align: center;
   color: #cd5c08;
@@ -83,7 +83,8 @@ h5 {
   display: flex;
   flex-direction: column;
   gap: 40px;
-  padding: 20px 0px
+  padding: 20px 0px;
+  font-family: "Raleway", sans-serif;
 }
 
 .heading {
