FH-50 | Review Fix UI ver 2

--- a/src/app/pages/renter/blog/blog.component.css
+++ b/src/app/pages/renter/blog/blog.component.css
@@ -31,9 +31,11 @@ h4 {
   width: 400px;
   height: 10px;
   background-color: #cd5c08;
+  box-sizing: content-box;
+  overflow: visible;
   box-shadow: 2px 2px 4px #888888;
   position: relative;
-  bottom: 40px;
+  bottom: 60px;
 }
 
 .btn-group {
