Fix avatar when login

--- a/src/app/pages/renter/components/header-nav-bar/header-nav-bar.component.html
+++ b/src/app/pages/renter/components/header-nav-bar/header-nav-bar.component.html
@@ -24,10 +24,10 @@
 
     <ng-template #popOver>
         <div class="d-flex flex-column setting-option">
-            <button class="btn">
+            <button class="btn setting-button">
                 Profile
             </button>
-            <button class="btn">
+            <button class="btn setting-button" (click)="logOut()">
                 Logout
             </button>
         </div>
