--- a/src/app/pages/renter/components/header-nav-bar/header-nav-bar.component.css
+++ b/src/app/pages/renter/components/header-nav-bar/header-nav-bar.component.css
@@ -67,3 +67,7 @@
     background-color: #dfa686;
     border-radius: 4px;
 }
+
+.setting-button:hover {
+    background-color: rgb(207, 192, 192) !important;
+}
