--- a/src/app/pages/renter/reservation-history/components/history-list/history-list.component.html
+++ b/src/app/pages/renter/reservation-history/components/history-list/history-list.component.html
@@ -17,10 +17,9 @@
     </span>
 </div>
 <div class="d-flex flex-column justify-content-between list">
-    <app-history-item></app-history-item>
-    <app-history-item></app-history-item>
-    <app-history-item></app-history-item>
+    <app-history-item *ngFor="let reservation of reservations" [reservation]="reservation"></app-history-item>
 </div>
 <div class="d-flex justify-content-center pagination-container">
-    <ngb-pagination [collectionSize]="70" [page]="4" size="sm" [ellipses]="true" />
+    <ngb-pagination [collectionSize]="totalCount" [pageSize]="pageSize" [(page)]="page" [ellipses]="true"
+        (pageChange)="pageChanged($event)" />
 </div>
