--- a/src/app/pages/renter/accommodation-detail/components/booking-detail-section/booking-detail-section.component.css
+++ b/src/app/pages/renter/accommodation-detail/components/booking-detail-section/booking-detail-section.component.css
@@ -61,3 +61,19 @@ label.radio input:checked+span {
   border: 2px solid black;
   cursor: pointer;
 }
+
+.active-button {
+  background-color: #bf6326 !important;
+  color: white !important;
+}
+
+.active-button:hover {
+  background-color: #fff !important;
+  color: #bf6326 !important;
+  border: 1px solid #bf6326 !important;
+}
+
+.selected-button {
+  border: 2px solid black !important;
+  box-shadow: #bf6326;
+}
