--- a/src/app/pages/renter/accommodation-detail/components/payment-form/payment-form.component.html
+++ b/src/app/pages/renter/accommodation-detail/components/payment-form/payment-form.component.html
@@ -11,19 +11,19 @@
         <div class="d-flex flex-column gap-2">
           <div class="room-code">
             <p class="fw-bold">Code Room</p>
-            <p>#Room1</p>
+            <p>{{selectedRoom?.code}}</p>
           </div>
           <div class="reservation-detail">
             <p class="fw-bold">Day</p>
             <div>
-              <span>December 10 - 15, 2023</span>
+              <span>{{getTimeRange()}}</span>
               <button (click)="openEditTimeModal()">Edit</button>
             </div>
           </div>
           <div class="reservation-detail">
             <p class="fw-bold">Guest</p>
             <div>
-              <span>1 Guest</span>
+              <span>{{totalNumberOfGuest}} Guest</span>
               <button (click)="openEditGuestNumberModal()">Edit</button>
             </div>
           </div>
@@ -32,9 +32,15 @@
       <div class="payment-option-list">
         <h5 class="fw-bold">Payment method</h5>
         <div class="d-flex gap-3">
-          <button class="payment-item btn btn-outline-secondary"><img src="assets/icons/vnpay.png" /></button>
-          <button class="payment-item btn btn-outline-secondary"><img src="assets/icons/momo.png" /></button>
-          <button class="payment-item btn btn-outline-secondary"><img src="assets/icons/visa.png" /></button>
+          <button class="payment-item btn btn-outline-secondary"
+            [class.selected-payment-method]="paymentMethod==='vnpay'" (click)="selectPaymentMethod('vnpay')"><img
+              src="assets/icons/vnpay.png" /></button>
+          <button class="payment-item btn btn-outline-secondary"
+            [class.selected-payment-method]="paymentMethod==='momo'" (click)="selectPaymentMethod('momo')"><img
+              src="assets/icons/momo.png" /></button>
+          <button class="payment-item btn btn-outline-secondary"
+            [class.selected-payment-method]="paymentMethod==='visa'" (click)="selectPaymentMethod('visa')"><img
+              src="assets/icons/visa.png" /></button>
         </div>
       </div>
       <div class="general-standard">
@@ -48,7 +54,7 @@
           <li>Maintain the house as if it were your home</li>
         </ul>
       </div>
-      <button class="btn mx-auto fw-bold submit-button" type="button">
+      <button class="btn mx-auto fw-bold submit-button" type="button" (click)="makeReservation()">
         Submit
       </button>
     </div>
@@ -59,7 +65,7 @@
       </p>
       <h5 class="fw-bold">Price details</h5>
       <div class="d-flex justify-content-between information">
-        <span>$14 x 4 night </span><span> $56</span>
+        <span>${{price}} x {{totalNight}} night </span><span> ${{price * totalNight}}</span>
       </div>
       <div class="d-flex justify-content-between information">
         <span>Cleaning fee </span><span> $2</span>
@@ -69,7 +75,7 @@
       </div>
       <hr />
       <div class="d-flex justify-content-between information fw-bold">
-        <span>(USD)</span><span>$68</span>
+        <span>(USD)</span><span>${{price * totalNight - 12 > 0 ? price * totalNight - 12 : 0}}</span>
       </div>
     </div>
   </div>
