--- a/src/app/pages/owner/components/sidebar/sidebar.component.css
+++ b/src/app/pages/owner/components/sidebar/sidebar.component.css
@@ -39,7 +39,7 @@
     border-radius: 12px;
     transition: 0.2s all ease-in-out;
     font-size: 14px;
-    width: fit-content;
+    width: 220px;
     color: white;
     text-decoration: none;
   }
