FH-53-Staff-Integrate | Nav bar, accommodation table and manage account

--- a/src/app/pages/staff/components/sidebar/sidebar.component.css
+++ b/src/app/pages/staff/components/sidebar/sidebar.component.css
@@ -76,7 +76,7 @@ body {
   color: white;
   text-decoration: none;
 }
-
+.sidebar ul li a.active-link,
 .sidebar ul li a:hover {
   background-color: #A54C20;
   color: var(--main-color);
