--- a/src/app/pages/staff/components/users-table/users-table.component.html
+++ b/src/app/pages/staff/components/users-table/users-table.component.html
@@ -26,7 +26,7 @@
                   id="Approved"
                   class="input-checkbox"
                 />
-                <label for="approved">APPROVED</label>
+                <label for="approved">ACTIVE</label>
               </div>
               <div class="status" data-status="Pending">
                 <input
@@ -35,16 +35,7 @@
                   id="Pending"
                   class="input-checkbox"
                 />
-                <label for="pending">PENDING</label>
-              </div>
-              <div class="status" data-status="Rejected">
-                <input
-                  type="checkbox"
-                  name="status"
-                  id="Rejected"
-                  class="input-checkbox"
-                />
-                <label for="rejected">REJECTED</label>
+                <label for="pending">ARCHIVED</label>
               </div>
               <div class="status" data-status="Banned">
                 <input
@@ -65,35 +56,35 @@
     </div>
   </div>
   <div class="table-container">
-    <table class="accommodation-table">
+    <table class="user-table">
       <thead>
         <tr>
           <th>ID</th>
-          <th>Owner Name</th>
-          <th>Latitude & Longitude</th>
-          <th>Date Apply</th>
+          <th>User Name</th>
+          <th>Email</th>
+          <th>Role</th>
           <th>Status</th>
           <th></th>
         </tr>
       </thead>
       <tbody>
-        <tr
-          *ngFor="let accommodation of accommodations | idFilter : searchTerm"
-        >
-          <td>{{ accommodation.id }}</td>
-          <td>{{ accommodation.ownerName }}</td>
-          <td>{{ accommodation.latitude }} & {{ accommodation.longitude }}</td>
-          <td>24/12/2023</td>
+        <tr *ngFor="let user of users | userFilter : searchTerm">
+          <td>{{ user.id }}</td>
+          <td>{{ user.firstName }} {{ user.lastName }}</td>
+          <td>{{ user.email }}</td>
           <td>
-            <div [ngClass]="getStatusClass(accommodation.status)">
-              {{ accommodation.status | uppercase }}
+            {{ user.role | titlecase }}
+          </td>
+          <td>
+            <div [ngClass]="getStatusClass(user.status)">
+              {{ user.status | uppercase }}
             </div>
           </td>
           <td>
             <img
               src="assets/icons/edit.png"
               alt="edit-icon"
-              [routerLink]="['/staff/accommodation-detail/', accommodation.id]"
+              [routerLink]="['/staff/user-detail/', user.id]"
             />
           </td>
         </tr>
