--- a/src/app/pages/renter/blog/blog.component.css
+++ b/src/app/pages/renter/blog/blog.component.css
@@ -131,6 +131,7 @@ h5 {
   width: 100%;
 }
 
+
 .content {
   display: flex;
   flex-direction: column;
@@ -204,7 +205,7 @@ h5 {
 
 .img-fluid {
   width: 100%;
-  height: 100px;
+  height: max-content;
   object-fit: cover;
 }
 
