--- a/src/app/pages/renter/reservation-history/components/history-list/history-list.component.css
+++ b/src/app/pages/renter/reservation-history/components/history-list/history-list.component.css
@@ -5,8 +5,8 @@
 h2 {
     margin: 0;
     color: #BF6326;
-    font-family: "Raleway", sans-serif;
-    font-weight: bolder;
+    font-family: Raleway;
+    font-weight: bold;
 }
 
 hr {
@@ -16,7 +16,7 @@ hr {
 
 .reservation-status-option {
     gap: 28px;
-    margin-bottom: 8px;
+    margin-bottom: 10px;
 }
 
 .reservation-status-option span {
