--- a/src/app/pages/renter/reservation-history/components/reservation-map/reservation-map.component.css
+++ b/src/app/pages/renter/reservation-history/components/reservation-map/reservation-map.component.css
@@ -12,8 +12,8 @@
 h2 {
     margin: 0;
     color: #BF6326;
-    font-family: "Raleway", sans-serif;
-    font-weight:bolder;
+    font-family: Raleway;
+    font-weight: bold;
 }
 
 hr {
