FH-50 | The newest update

--- a/src/app/pages/renter/home/components/accommodation-list/accommodation-list.component.html
+++ b/src/app/pages/renter/home/components/accommodation-list/accommodation-list.component.html
@@ -1,16 +1,31 @@
 <div class="mt-2">
     <app-accommodation-type-option></app-accommodation-type-option>
 </div>
-<div class="container-fluid px-4 py-3">
+<div class="container-fluid px-4 py-4">
     <div class="row row-cols-4 g-4">
-        <app-accommodation-item></app-accommodation-item>
-        <app-accommodation-item></app-accommodation-item>
-        <app-accommodation-item></app-accommodation-item>
-        <app-accommodation-item></app-accommodation-item>
-        <app-accommodation-item></app-accommodation-item>
-        <app-accommodation-item></app-accommodation-item>
-        <app-accommodation-item></app-accommodation-item>
-        <app-accommodation-item></app-accommodation-item>
+        <app-accommodation-item [carouselImages]="['https://a0.muscache.com/im/pictures/2f87b53c-8945-4765-aec4-b4ddaa6710f5.jpg?im_w=720', 'https://a0.muscache.com/im/pictures/7c659747-f8dd-43c4-9367-905100a2111a.jpg?im_w=1200', 'https://a0.muscache.com/im/pictures/2e38f13c-fef8-442a-8f08-036a70dc3fe9.jpg?im_w=720']">
+        </app-accommodation-item>
+
+        <app-accommodation-item [carouselImages]="['https://a0.muscache.com/im/pictures/miso/Hosting-1010739543268738502/original/68a3c4f8-9172-4f57-b13f-f3fb45a3a977.jpeg?im_w=1200', 'https://a0.muscache.com/im/pictures/miso/Hosting-1010739543268738502/original/3e44d3b1-d989-465e-8423-b5e37bba001a.jpeg?im_w=720', 'https://a0.muscache.com/im/pictures/miso/Hosting-1010739543268738502/original/ce793e31-d629-4e7a-a9ed-43bb1d647648.jpeg?im_w=720']">
+        </app-accommodation-item>
+
+        <app-accommodation-item [carouselImages]="['https://a0.muscache.com/im/pictures/cae55333-fc9a-47f1-ace3-bd30b978f884.jpg?im_w=1200', 'https://a0.muscache.com/im/pictures/fc47407e-74e2-4151-af39-8cdf10c9f0a3.jpg?im_w=1200', 'https://a0.muscache.com/im/pictures/3e453a23-4fe3-438d-9692-cf012ad8c864.jpg?im_w=720']">
+        </app-accommodation-item>
+
+        <app-accommodation-item [carouselImages]="['https://a0.muscache.com/im/pictures/miso/Hosting-949736278752385915/original/31d2a084-b2d7-4726-b5f0-ffe7f8714587.jpeg?im_w=1200', 'https://a0.muscache.com/im/pictures/miso/Hosting-949736278752385915/original/efac6d09-43fe-43d6-803c-071fc4791764.jpeg?im_w=720', 'https://a0.muscache.com/im/pictures/1f713935-d110-4711-85ea-684d22a9cbca.jpg?im_w=720']">
+        </app-accommodation-item>
+
+        <app-accommodation-item [carouselImages]="['https://a0.muscache.com/im/pictures/miso/Hosting-832516283369672802/original/bf6a8195-9bbc-4af6-96d1-9e2a6ecd0633.jpeg?im_w=1200', 'https://a0.muscache.com/im/pictures/miso/Hosting-832516283369672802/original/c8a96828-24b3-498d-a7ce-06c364d3b90e.jpeg?im_w=720', 'https://a0.muscache.com/im/pictures/miso/Hosting-832516283369672802/original/197bc5fb-ffd9-4b09-a724-058082ba2f4c.jpeg?im_w=720']">
+        </app-accommodation-item>
+
+        <app-accommodation-item [carouselImages]="['https://a0.muscache.com/im/pictures/dc30b90f-92e0-4a9c-a290-a10ce04107e2.jpg?im_w=1200', 'https://a0.muscache.com/im/pictures/b6cfb691-f2dd-4cc1-bd72-af3b9fbe6447.jpg?im_w=720', 'https://a0.muscache.com/im/pictures/2952bff6-5101-4951-bb71-0cdba8685f30.jpg?im_w=720']">
+        </app-accommodation-item>
+
+        <app-accommodation-item [carouselImages]="['https://a0.muscache.com/im/pictures/miso/Hosting-1050676626167347655/original/93815c87-488a-4018-970b-b6ad8ea84a5d.png?im_w=1200', 'https://a0.muscache.com/im/pictures/miso/Hosting-1050676626167347655/original/cdc43cf6-4c09-4d32-9ded-0d332dad6c68.png?im_w=720', 'https://a0.muscache.com/im/pictures/miso/Hosting-1050676626167347655/original/74811673-acee-48cc-b482-7c020367999f.png?im_w=720']">
+        </app-accommodation-item>
+
+        <app-accommodation-item [carouselImages]="['https://a0.muscache.com/im/pictures/ebb5e588-270b-4ef6-9768-cc7bf1b9d318.jpg?im_w=1200', 'https://a0.muscache.com/im/pictures/8148147b-9609-4b01-bf2a-60dba18d7818.jpg?im_w=720', 'https://a0.muscache.com/im/pictures/14a181e9-c2f0-4683-a1df-6fdb9014e7b1.jpg?im_w=720']">
+        </app-accommodation-item>
     </div>
 </div>
 <!-- TODO: Update link to accommodation list later -->
