--- a/src/app/pages/renter/home/components/accommodation-list/components/accommodation-item/accommodation-item.component.html
+++ b/src/app/pages/renter/home/components/accommodation-list/components/accommodation-item/accommodation-item.component.html
@@ -1,5 +1,5 @@
 <div class="col">
-    <app-carousel></app-carousel>
+    <app-carousel [images]="carouselImages"></app-carousel>
     <p class="item-address">
         Thu Duc District - HCM City
         <span>
