--- a/src/app/pages/renter/home/components/adventure-section/adventure-section.component.html
+++ b/src/app/pages/renter/home/components/adventure-section/adventure-section.component.html
@@ -4,28 +4,28 @@
 <div class="container-fluid d-flex flex-column adventure-content px-4 py-3">
     <div class="row row-cols-3 g-4">
         <div class="col">
-            <img src="assets/mock/h1.jpg" alt="Random first slide" />
+            <img src="https://www.in-travel.org/wp-content/uploads/2021/07/Da_Nang_Vietnam-750x565.jpg" alt="Random first slide" />
         </div>
         <div class="col">
-            <img src="assets/mock/h1.jpg" alt="Random first slide" />
+            <img src="https://i.pinimg.com/564x/12/33/71/12337193ffd1163bbf11d96f4a1a3f7a.jpg" alt="Random first slide" />
         </div>
         <div class="col">
-            <img src="assets/mock/h1.jpg" alt="Random first slide" />
+            <img src="https://www.in-travel.org/wp-content/uploads/2020/12/ho-chi-minh-1536x1061.jpg" alt="Random first slide" />
         </div>
 
     </div>
     <div class="row row-cols-4 g-4">
         <div class="col">
-            <img src="assets/mock/h1.jpg" alt="Random first slide" />
+            <img src="https://i.pinimg.com/564x/18/16/91/181691be70ee8b99851a4ecfc2f5efd4.jpg" alt="Random first slide" />
         </div>
         <div class="col">
-            <img src="assets/mock/h1.jpg" alt="Random first slide" />
+            <img src="https://i.pinimg.com/564x/d1/9e/e1/d19ee12a9bae44ebf6af76c1897f66aa.jpg" alt="Random first slide" />
         </div>
         <div class="col">
-            <img src="assets/mock/h1.jpg" alt="Random first slide" />
+            <img src="https://i.pinimg.com/564x/b6/69/36/b6693609c03d4390e8a596e93c16842a.jpg" alt="Random first slide" />
         </div>
         <div class="col">
-            <img src="assets/mock/h1.jpg" alt="Random first slide" />
+            <img src="https://i.pinimg.com/564x/87/9a/a0/879aa0d98eab8913cdab628e0ba35be7.jpg" alt="Random first slide" />
         </div>
     </div>
 </div>
