--- a/src/app/pages/renter/home/components/footer/footer.component.html
+++ b/src/app/pages/renter/home/components/footer/footer.component.html
@@ -29,10 +29,10 @@
                 <li>FAQ</li>
             </ul>
             <div class="contact-icon-container">
-                <a href="#"><img src="assets/icons/facebook.png"></a>
-                <a href="#"><img src="assets/icons/instagram.png"></a>
-                <a href="#"><img src="assets/icons/mail.png"></a>
-                <a href="#"><img src="assets/icons/tiktok.png"></a>
+                <a href="https://www.facebook.com/foxhubvn" target="_blank"><img src="assets/icons/facebook.png"></a>
+                <a href="https://www.instagram.com/foxhub.vn/" target="_blank" ><img src="assets/icons/instagram.png"></a>
+                <a href="#" target="_blank"><img src="assets/icons/mail.png"></a>
+                <a href="https://www.tiktok.com/@foxhub05?lang=en" target="_blank"><img src="assets/icons/tiktok.png"></a>
             </div>
         </section>
         <section>
