--- a/src/app/pages/renter/home/components/top-rate/top-rate.component.html
+++ b/src/app/pages/renter/home/components/top-rate/top-rate.component.html
@@ -3,18 +3,35 @@
         BEST FOR YOU
     </h2>
     <div class="container-fluid">
-        <div class="row row-cols-3 gx-5">
+        <div class="row row-cols-4 gx-5">
             <div class="col">
-                <app-carousel></app-carousel>
+                <app-carousel [images]="['https://a0.muscache.com/im/pictures/miso/Hosting-1010739543268738502/original/68a3c4f8-9172-4f57-b13f-f3fb45a3a977.jpeg?im_w=1200', 'https://a0.muscache.com/im/pictures/miso/Hosting-686476518537818617/original/68a57c03-1081-436d-aaf0-33a20ae8d159.jpeg?im_w=1200', 'https://a0.muscache.com/im/pictures/hosting/Hosting-1030280962762130556/original/eb50a556-fbc9-4682-89ef-a2f781a0b53d.jpeg?im_w=1200']"></app-carousel>
                 <p class="item-address">
-                    Thu Duc District - HCM City
+                    District 1 - HCM City
                     <span>
                         <i class="bi bi-star-fill"></i>
-                        5 (42)
+                        4 (32)
                     </span>
                 </p>
                 <p class="item-owner">
-                    Owner: Nguyen Van A
+                    Owner: Meena Miller
+                </p>
+                <p class="item-price">
+                    Price: $20/day
+                </p>
+            </div>
+
+            <div class="col">
+                <app-carousel [images]="['https://a0.muscache.com/im/pictures/14e22f09-6537-4ec0-b6d3-c168bc222505.jpg?im_w=1200', 'https://a0.muscache.com/im/pictures/miso/Hosting-1005351905768706876/original/5f52c232-0930-4f9e-b187-09ce4e3baa44.jpeg?im_w=1200', 'https://a0.muscache.com/im/pictures/411d629a-4ca3-4702-818e-5138ce432222.jpg?im_w=1200']"></app-carousel>
+                <p class="item-address">
+                    Vinh Trung District - Da Nang City
+                    <span>
+                        <i class="bi bi-star-fill"></i>
+                        5 (10)
+                    </span>
+                </p>
+                <p class="item-owner">
+                    Owner: Nessa Nguyen
                 </p>
                 <p class="item-price">
                     Price: $15/day
@@ -22,36 +39,35 @@
             </div>
 
             <div class="col">
-                <app-carousel></app-carousel>
+                <app-carousel [images]="['https://a0.muscache.com/im/pictures/7f31620a-dcc0-4c7e-829e-302b3112312a.jpg?im_w=1200', 'https://a0.muscache.com/im/pictures/hosting/Hosting-1051408611698283776/original/278aedcf-cea2-471d-b1f4-5a3c6ba29312.jpeg?im_w=1200', 'https://a0.muscache.com/im/pictures/miso/Hosting-958384063304964490/original/ad185b70-ebf6-4164-870b-72e56c8c7077.jpeg?im_w=1200']"></app-carousel>
                 <p class="item-address">
-                    Thu Duc District - HCM City
+                    Thanh Xuan District - Ha Noi City
                     <span>
                         <i class="bi bi-star-fill"></i>
                         5 (42)
                     </span>
                 </p>
                 <p class="item-owner">
-                    Owner: Nguyen Van A
+                    Owner: Anntonia Porsil
                 </p>
                 <p class="item-price">
-                    Price: $15/day
+                    Price: $25/day
                 </p>
             </div>
-
             <div class="col">
-                <app-carousel></app-carousel>
+                <app-carousel [images]="['https://a0.muscache.com/im/pictures/7f31620a-dcc0-4c7e-829e-302b3112312a.jpg?im_w=1200', 'https://a0.muscache.com/im/pictures/hosting/Hosting-1051408611698283776/original/278aedcf-cea2-471d-b1f4-5a3c6ba29312.jpeg?im_w=1200', 'https://a0.muscache.com/im/pictures/miso/Hosting-958384063304964490/original/ad185b70-ebf6-4164-870b-72e56c8c7077.jpeg?im_w=1200']"></app-carousel>
                 <p class="item-address">
-                    Thu Duc District - HCM City
+                    Thanh Xuan District - Ha Noi City
                     <span>
                         <i class="bi bi-star-fill"></i>
                         5 (42)
                     </span>
                 </p>
                 <p class="item-owner">
-                    Owner: Nguyen Van A
+                    Owner: Anntonia Porsil
                 </p>
                 <p class="item-price">
-                    Price: $15/day
+                    Price: $25/day
                 </p>
             </div>
         </div>
