FH-50 | Update full UI

--- a/src/app/pages/renter/home-service/home-service.component.html
+++ b/src/app/pages/renter/home-service/home-service.component.html
@@ -7,24 +7,33 @@
       <p class="service-section-slogan">Your comfort is our top priority!</p>
       <div class="row row-cols-4 service-list">
         <div class="col fox-service-item">
-          <img src="assets/images/clean4u.jpg" class="brand-image" />
-          <p class="service-name">Clean4u - Giúp việc tận nơi</p>
-          <p class="service-price">$10/hour</p>
+          <a href="https://www.facebook.com/ungdungClean4U" target="_blank">
+            <img src="assets/images/clean4u.jpg" class="brand-image" alt="Clean4u - Giúp việc tận nơi" />
+            <p class="service-name">Clean4u - Giúp việc tận nơi</p>
+            <p class="service-price">$10/hour</p>
+          </a>
         </div>
+        
         <div class="col fox-service-item">
+          <a href="https://www.facebook.com/btaskee" target="_blank">
           <img src="assets/images/btaskee.png" class="brand-image" />
           <p class="service-name">bTaskee</p>
           <p class="service-price">$16/day</p>
+        </a>
         </div>
         <div class="col fox-service-item">
+          <a href="https://jupviec.vn/" target="_blank">
           <img src="assets/images/jupviec.jpg" class="brand-image" />
           <p class="service-name">JupViec.vn</p>
           <p class="service-price">$25/day</p>
+        </a>
         </div>
         <div class="col fox-service-item">
+          <a href="https://phuviecnhanh.vn/?fbclid=IwAR0NXTtq3wjcFb-t-0oQ7bs3k3jJLWnz4hMcupeZ7thaHB-mMib8B2wf_38" target="_blank">
           <img src="assets/images/pvn.png" class="brand-image" />
           <p class="service-name">Phụ việc nhanh</p>
           <p class="service-price">$18/day</p>
+        </a>
         </div>
       </div>
     </div>
@@ -34,19 +43,25 @@
       <p class="service-section-slogan">Your comfort is our top priority!</p>
       <div class="row row-cols-4 service-list">
         <div class="col fox-service-item">
+          <a href="https://www.facebook.com/fixhomevietnam" target="_blank">
           <img src="assets/images/fixhome.jpg" class="brand-image" />
           <div class="service-name">Fixhome</div>
           <div class="service-price">$10/service-price</div>
+        </a>
         </div>
         <div class="col fox-service-item">
+          <a href="https://www.facebook.com/profile.php?id=100095068196932" target="_blank">
           <img src="assets/images/nhaxanh.jpg" class="brand-image" />
           <p class="service-name">Nhà Xanh</p>
           <p class="service-price">$15/day</p>
+        </a>
         </div>
         <div class="col fox-service-item">
+          <a href="https://www.facebook.com/masterhome.xuongnoithat" target="_blank">
           <img src="assets/images/masterhome.jpg" class="brand-image" />
           <div class="service-name">Masterhome - Furniture & Decor</div>
           <div class="service-price">$15/day</div>
+        </a>
         </div>
       </div>
     </div>
