--- a/src/app/pages/renter/home/components/footer/footer.component.html
+++ b/src/app/pages/renter/home/components/footer/footer.component.html
@@ -6,8 +6,9 @@
                 Floor 38, Kloud Saigon Centre Tower 2, 65 Le Loi strict, 1 District , Ho Chi Minh City, Vietnam
             </p>
             <iframe class="map" width="100%" height="300" frameborder="0" scrolling="no" marginheight="0"
-                marginwidth="0" src="https://www.google.com/maps/embed">
-            </iframe>
+        marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.545817139114!2d106.69931461425351!3d10.780136992313282!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f4743648f3d%3A0x16ce95918cb14834!2sSaigon%20Centre!5e0!3m2!1sen!2suk!4v1641961875288!5m2!1sen!2suk">
+</iframe>
+
             <!-- <google-map [center]="center" [zoom]="zoom">
             </google-map> -->
         </section>
