FH-50 | Update full UI new

--- a/src/app/pages/renter/reservation-history/components/history-list/history-list.component.css
+++ b/src/app/pages/renter/reservation-history/components/history-list/history-list.component.css
@@ -60,6 +60,5 @@ ngb-pagination ::ng-deep .page-link:focus {
 }
 
 .active-tab {
-    background-color: antiquewhite;
-    border-radius: 4px;
+    text-decoration: underline;
 }
