--- a/src/app/pages/renter/listing/listing.component.html
+++ b/src/app/pages/renter/listing/listing.component.html
@@ -26,7 +26,7 @@
                     </div>
                 </div>
                 <div class="d-flex justify-content-center pagination-container">
-                    <ngb-pagination [collectionSize]="totalCount" [pageSize]="pageSize" [(page)]="page"
+                    <ngb-pagination [collectionSize]="totalCount" [pageSize]="pageSize" [(page)]="page" [maxSize]="4"
                         [ellipses]="true" (pageChange)="pageChanged($event)" />
                 </div>
             </div>
